feat(#21): implement CreateEmergencyRoom
