# docs/swagger.json
@@ -35,40 +35,6 @@
                         }
                     }
                 }
-            }
-        },
-        "/er/{id}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emergency-rooms"
-                ],
-                "summary": "get an emergency room by id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Emergency Room's ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/routes.GetSingleERResponse"
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/routes.HTTPErrorResponse"
-                        }
-                    }
-                }
             },
             "put": {
                 "consumes": [
@@ -90,6 +56,46 @@
                         "schema": {
                             "$ref": "#/definitions/routes.PutERRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/routes.GetSingleERResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/routes.HTTPErrorResponse"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
+                        "schema": {
+                            "$ref": "#/definitions/routes.HTTPErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/er/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "emergency-rooms"
+                ],
+                "summary": "get an emergency room by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Emergency Room's ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -207,6 +213,10 @@
         },
         "models.Point": {
             "type": "object",
+            "required": [
+                "lat",
+                "long"
+            ],
             "properties": {
                 "lat": {
                     "type": "number"
@@ -244,6 +254,11 @@
         },
         "routes.GetSingleERResponse": {
             "type": "object",
+            "required": [
+                "displayableAddress",
+                "location",
+                "name"
+            ],
             "properties": {
                 "departments": {
                     "type": "array",
@@ -300,11 +315,16 @@
         },
         "routes.PutERRequest": {
             "type": "object",
+            "required": [
+                "displayableAddress",
+                "location",
+                "name"
+            ],
             "properties": {
                 "departments": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.DepartmentBase"
+                        "type": "string"
                     }
                 },
                 "displayableAddress": {
